# czbi-c-bird_invenio_repository

./: .copier-answers.yml  .invenio  README.md  invenio.cfg  package.json  pyproject.toml  variables
datasets/: .copier-answers.yml  __init__.py  activity_collection.yaml  activity_growth_protocol.yaml  activity_image_acquisition.yaml  activity_image_analysis.yaml  activity_image_processing.yaml  activity_sample_preparation.yaml  activity_synthesis.yaml  metadata.yaml  model.py  serializers.py
docker/: development.crt  development.key  docker-compose.yml
i18n/semantic-ui/translations/messages/: index.js
sample_data/: complete_metadata_sample.json
ui/datasets/: __init__.py
ui/datasets/semantic-ui/js/datasets/forms/: FormFieldsContainer.jsx  index.js
ui/datasets/templates/semantic-ui/datasets/record_detail/: banners.html  main.html
